manifests/2.prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: f5tt
  labels:
    app: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
        - name: prometheus-data
          mountPath: /prometheus
        args:
          - "--storage.tsdb.retention.time=730d"
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--web.enable-admin-api"
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: pvc-prometheus

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: f5tt
  labels:
    app: prometheus
spec:
  ports:
  - port: 9090
  selector:
    app: prometheus
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: f5tt
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    #nginx.com/health-checks: "true"
  labels:
    app: prometheus
    tier: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.miller.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
