manifests/4.pushgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
  namespace: f5tt
  labels:
    app: pushgateway
spec:
  selector:
    matchLabels:
      app: pushgateway
  replicas: 1
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
      - name: pushgateway
        image: prom/pushgateway
        ports:
        - containerPort: 9091

---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: f5tt
  labels:
    app: pushgateway
spec:
  ports:
  - port: 9091
  selector:
    app: pushgateway

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway
  namespace: f5tt
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    #nginx.com/health-checks: "true"
    nginx.org/server-snippets: |
      access_log off;
  labels:
    app: pushgateway
spec:
  ingressClassName: nginx
  rules:
    - host: pushgateway.f5tt.miller.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pushgateway
                port:
                  number: 9091
